# chico

./: .coverage  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publish.yml
api/core/: index.html
api/providers/: index.html
api/schedulers/: index.html
api/sources/: index.html
chico/: __main__.py
chico/.agents/skills/chico-ai/: SKILL.md
chico/cli/: add.py  apply.py  diff.py  init.py  list.py  main.py  output.py  plan.py  schedule.py  status.py  sync.py
chico/core/: apply.py  config.py  log.py  paths.py  plan.py  provider.py  resource.py  source.py  state.py
chico/providers/: kiro.py
chico/schedulers/: __init__.py  unix.py  windows.py
chico/sources/: github.py
cli/apply/: index.html
cli/diff/: index.html
cli/init/: index.html
cli/list/: index.html
cli/schedule/: index.html
cli/status/: index.html
cli/sync/: index.html
docs/: index.md
docs/api/: core.md  providers.md  schedulers.md  sources.md
docs/cli/: add.md  apply.md  diff.md  init.md  list.md  schedule.md  status.md  sync.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
search/: search_index.json
tests/: test_main.py
tests/cli/: test_add.py  test_apply.py  test_diff.py  test_init.py  test_list.py  test_output.py  test_plan.py  test_schedule.py  test_status.py  test_sync.py
tests/core/: test_apply.py  test_config.py  test_log.py  test_paths.py  test_plan.py  test_provider.py  test_resource.py  test_source.py  test_state.py
tests/providers/: test_kiro.py
tests/schedulers/: test_init.py  test_unix.py  test_windows.py
tests/sources/: test_github.py
