[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chico"]

[project]
name = "chico-ai"
version = "1.0.1"
description = "Agent-native configuration control plane"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"
keywords = ["ai-agents", "cli", "configuration", "sync", "github", "kiro", "devtools"]
authors = [{ name = "Rafael de Oliveira Marques", email = "rafaelomarques@gmail.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
    "PyGithub>=2.0",
]

[project.urls]
Homepage = "https://ceb10n.github.io/chico"
Repository = "https://github.com/ceb10n/chico"
Documentation = "https://ceb10n.github.io/chico"

[project.scripts]
chico-ai = "chico.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "ty>=0.0.1a1",
    "pre-commit>=4.0",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.29",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=chico --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
branch = true
source = ["chico"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
ignore = [
    "E501", # line too long — handled by formatter
    "TCH",  # type-checking blocks add boilerplate without benefit at this scale
]

[tool.ruff.lint.isort]
known-first-party = ["chico"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
